// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerHistory renders with empty logs  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={undefined}
      testID={undefined}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PlayerHistory renders with first duel with 2 logs  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={undefined}
      testID={undefined}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 10,
              "marginTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "flex": 1,
                "fontSize": 15,
                "marginBottom": 5,
                "marginRight": 10,
                "textAlign": "right",
              },
              Object {
                "color": "red",
              },
            ]
          }
        >
          -22
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "grey",
                "flex": 2,
                "fontSize": 30,
                "textDecorationLine": "line-through",
                "textDecorationStyle": "solid",
              },
            ]
          }
        >
          20
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 10,
              "marginTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "flex": 1,
                "fontSize": 15,
                "marginBottom": 5,
                "marginRight": 10,
                "textAlign": "right",
              },
              Object {
                "color": "green",
              },
            ]
          }
        >
          +
          10
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "grey",
                "flex": 2,
                "fontSize": 30,
                "textDecorationLine": "line-through",
                "textDecorationStyle": "solid",
              },
            ]
          }
        >
          20
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PlayerHistory renders with first duel with no movements  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={undefined}
      testID={undefined}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PlayerHistory renders with no props  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={undefined}
      testID={undefined}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PlayerHistory renders with second duel when no logs, when first duel has 2 logs  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={undefined}
      testID={undefined}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-end",
              "color": "grey",
              "fontSize": 30,
            }
          }
        >
          .
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
